# pdf2excel

./: .env  app.py  excel_handler.py  gemini_caller.py  main.py  output.json  pyproject.toml  test.py  ui.py
ai/: gemini_caller.py
gui/: boq_engine.py  row_builders.py
services/: excel_handler.py  pdf_handler.py
utils/: file_dialogs.py
